--- a/yellow-paper/docs/circuits/private-kernel-initial.mdx
+++ b/yellow-paper/docs/circuits/private-kernel-initial.mdx
@@ -328,10 +328,10 @@ C ..> D: Copy the data from the inputs A to the outputs B\n(possibly with some m
 
 ---
 
-<ZoomableMermaid
-  chart={
-    `classDiagram 
-  direction TB
+{/\* <ZoomableMermaid
+chart={
+`classDiagram
+direction TB
 
 class PrivateInputs {
 transaction\*request: TransactionRequest
@@ -623,7 +623,7 @@ ConstantData --* PublicInputs : constant*data
 TransientAccumulatedData --\* PublicInputs: transient_accumulated_data
 
 `}
-/>
+/> \*/}
 
 The diagram:
 
