--- a/docs/docs/aztec/index.mdx
+++ b/docs/docs/aztec/index.mdx
@@ -3,7 +3,7 @@ title: Vision
 sidebar_position: 1
 ---
 
-import Disclaimer from "../../../../src/components/Disclaimers/_wip_disclaimer.mdx";
+import Disclaimer from "../../src/components/Disclaimers/_wip_disclaimer.mdx";
 
 ## The world's encrypted ledger
 
